--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,13 +7,14 @@
   <title>Macabre's Burgers</title>
   	<script src="https://code.jquery.com/jquery.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet"> 
-  <link rel="stylesheet" type="text/html" href="/assets/css/burger_style.css">
-  <script type="javascript" src="/assets/js/burgers.js"></script>
+  <link rel="stylesheet" type="text/css" href="/assets/css/burger_style.css">
+<script src="https://rawgithub.com/soulwire/sketch.js/master/js/sketch.min.js"></script>
+  <script type="text/javascript" src="/assets/js/burgers.js"></script>
 
 </head>
 <body>
-  <h1>Macabre's Burgers</h1>
-  <img src="/assets/img/baga.png" style="height: 300px; width: 300px" alt="マカブレ バーガー">
+  <h1 class="title">Macabre's Burgers</h1>
+  <img id="logo" src="/assets/img/murderburger.jpg" style="height: 400px; width: 300px" alt="マカブレ バーガー">
   {{{ body}}}
 </body>
 </html>
