--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,21 +4,25 @@
       <div class="row">
         {{#each burger_data}} {{#unless this.devoured}}
         <div class="col-xs-9 text-center">
-          <pre>{{this.id}}.{{this.burger_name}}</pre>
         </div>
         <div class="col-xs-3 text-center">
           <form method="POST" action="/burgers/update?_method=PUT" class="button-size">
             <input type="hidden" name="burger_id" type="text" value={{this.id}}>
             <br>
-            <button type="submit" class="btn btn-default">DEVOUR IT!</button>
+            <button type="submit" class="burgerAvailable">{{this.id}}.  Eat the "{{this.burger_name}}"</button>
           </form>
         </div>
         
         {{/unless}} {{/each}}
+        <div class="thespacebetween">Burgers That have been eaten</div>
             <div class="col-xs-6 text-center" class="task">
       {{#each burger_data}}
         {{#if this.devoured}}
-          <input class="form-control" type="text" placeholder="{{this.id}}. {{this.burger_name}}" readonly>
+            <div class='burgerEaten'>
+              <div>
+                {{this.burger_name}}
+              </div>
+            </div>
           {{/if}}
         {{/each}}
     </div>
@@ -28,14 +32,12 @@
   </div>
 </div>
 
-<div class="container">
-  <div class="row">
-    <div class="col-xs-12 text-center enter_section">
-      <form action="/burgers/create" method="POST">
-        <input type="text" name="burger_name" class="form-control" value="" id="enter_text">
-        <button type="submit" class="btn btn-primary" id="text-enter-button">SUBMIT</button>
-      </form>
-      <p>Enter in a burger you would like to eat!</p>
-    </div>
+
+<div class="row">
+  <div class="col s12">
+    <form action="/burgers/create" method="POST">
+      <input type="text" id="name" name="burger_name" placeholder="Uber Delicious Burger">
+      <button type="submit" class="addBurgerButton">Place Your Order</button>
+    </form>
   </div>
 </div>
