--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Macabre's Burgers</title>
   	<script src="https://code.jquery.com/jquery.js"></script>
+    	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
   <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet"> 
   <link rel="stylesheet" type="text/css" href="/assets/css/burger_style.css">
 <script src="https://rawgithub.com/soulwire/sketch.js/master/js/sketch.min.js"></script>
@@ -13,7 +14,7 @@
 
 </head>
 <body>
-  <h1 class="title">Macabre's Burgers</h1>
+  <h1 class="title">Murder Burger</h1>
   <img id="logo" src="/assets/img/murderburger.jpg" style="height: 400px; width: 300px" alt="マカブレ バーガー">
   {{{ body}}}
 </body>
