--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,43 +1,32 @@
 <div class="container">
   <div class="row">
-    <div class="col-xs-6 text-center" class="task">
-      <div class="row">
-        {{#each burger_data}} {{#unless this.devoured}}
-        <div class="col-xs-9 text-center">
-        </div>
-        <div class="col-xs-3 text-center">
-          <form method="POST" action="/burgers/update?_method=PUT" class="button-size">
-            <input type="hidden" name="burger_id" type="text" value={{this.id}}>
-            <br>
-            <button type="submit" class="burgerAvailable">{{this.id}}.  Eat the "{{this.burger_name}}"</button>
-          </form>
-        </div>
-        
-        {{/unless}} {{/each}}
-        <div class="thespacebetween">Burgers That have been eaten</div>
-            <div class="col-xs-6 text-center" class="task">
-      {{#each burger_data}}
-        {{#if this.devoured}}
-            <div class='burgerEaten'>
-              <div>
-                {{this.burger_name}}
-              </div>
+    <div class="row">
+      {{#each burger_data}} {{#unless this.devoured}}
+      <div class="col-s12 text-center">
+        <form method="POST" action="/burgers/update?_method=PUT" class="button-size">
+          <input type="hidden" name="burger_id" type="text" value={{this.id}}>
+          <button type="submit" class="burgerAvailable">{{this.id}}. Eat the "{{this.burger_name}}"</button>
+        </form>
+      </div>
+      {{/unless}} {{/each}}
+      <div class="col-s12 text-center" class="task">
+        <div class="thespacebetween">Burgers That have been eaten {{#each burger_data}} {{#if this.devoured}}
+          <div class='burgerEaten'>
+            <div>
+              {{this.burger_name}} was devoured
             </div>
-          {{/if}}
-        {{/each}}
-    </div>
+          </div>
+          {{/if}} {{/each}}
+        </div>
       </div>
     </div>
-
-  </div>
-</div>
-
-
-<div class="row">
-  <div class="col s12">
-    <form action="/burgers/create" method="POST">
-      <input type="text" id="name" name="burger_name" placeholder="Uber Delicious Burger">
-      <button type="submit" class="addBurgerButton">Place Your Order</button>
-    </form>
+    <div class="row">
+      <div class="col s6 offset-s3 text-center">
+        <form action="/burgers/create" method="POST">
+          <input type="text" id="name" name="burger_name" placeholder="What would you like to eat?">
+          <button type="submit" class="addBurgerButton">Place Your Order</button>
+        </form>
+      </div>
+    </div>
   </div>
 </div>
