getting ready for heroku

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,17 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Macabre's Burgers</title>
-  	<script src="https://code.jquery.com/jquery.js"></script>
-    	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet"> 
+  <title>Murder Burger</title>
+  <script src="https://code.jquery.com/jquery.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="/assets/css/burger_style.css">
-<script src="https://rawgithub.com/soulwire/sketch.js/master/js/sketch.min.js"></script>
+  <script src="https://rawgithub.com/soulwire/sketch.js/master/js/sketch.min.js"></script>
   <script type="text/javascript" src="/assets/js/burgers.js"></script>
 </head>
+
 <body>
   <h1 class="title">Murder Burger</h1>
-  <img id="logo" src="/assets/img/murderburger.jpg" style="height: 400px; width: 300px" alt="マカブレ バーガー">
-  {{{ body}}}
+  <img id="logo" src="/assets/img/murderburger.jpg" style="height: 400px; width: 300px" alt=""> {{{ body}}}
 </body>
 </html>
